# blueskim

./: .env.example  README.md  TODO.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  test.js
app/: globals.css  layout.tsx
app/(main)/: layout.tsx
app/(main)/(routes)/: layout.tsx  page.tsx
app/(setup)/(routes)/: page.tsx
app/api/servers/: route.ts
app/api/uploadthing/: core.ts
app/api/user/: route.ts
app/dashboard/: layout.tsx  page.tsx
app/dashboard/ping/: page.tsx
app/lib/: api.ts  data.ts  definitions.ts
backend/: .env  Cargo.toml
backend/examples/: bitvec.rs  tai.md  tai.rs
backend/src/: lib.rs  main.rs  snowflake.rs
components/: app-sidebar.tsx  file-upload.tsx  test-sidebar.tsx
components/modals/: create-server-modal.tsx  initial-modal.tsx
components/sidebar/: navigation-action.tsx  navigation-server.tsx  navigation-sidebar.tsx  server-sidebar.tsx  user-button.tsx
components/ui/: context-menu.tsx  separator.tsx  sidebar.tsx
frontend/: TODO.md
frontend/assets/: generate.sh
frontend/src/: app.css
frontend/src/lib/: date.js  useContextMenu.js  utils.js  world.js
frontend/src/routes/: +layout.svelte  +page.svelte
lib/: current-profile.ts  initial-profile.ts
nginx/: .gitignore  nginx.conf
prisma/: schema.prisma
scripts/: mongodb-test.cjs
src/: app.css
src/lib/: i18n.js
src/lib/components/: ChannelEntry.svelte  ChannelHeader.svelte  ChannelName.svelte  ContextMenuSeparator.svelte  ContextMenuSub.svelte  LiveStatus.svelte  MainContent.svelte  MaskedImage.svelte  MemberEntry.svelte  MemberSidebar.svelte  (+12 more)
src/routes/: +layout.svelte  +page.svelte
(+66 files in other folders)
