[package]
name = "blueskim-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "fs", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
